      I'm looking for.
    * Improved repr() for strategies and RandomWithSeed instances.
    * Add detection for flaky test cases where hypothesis managed to find an
      example which breaks it but on the final invocation of the test it does
      not raise an error. This will typically happen with too much recursion
      errors but could conceivably happen in other circumstances too.
    * Provide a "derandomized" mode. This allows you to run hypothesis with
      zero real randomization, making your build nice and deterministic. The
      tests run with a seed calculated from the function they're testing so you
      should still get a good distribution of test cases.
    * Add a mechanism for more conveniently defining tests which just sample
      from some collection.
    * Fix for a really subtle bug deep in the internals of the strategy table.
      In some circumstances if you were to define instance stratagies for both
      a parent class and one or more of its subclasses you would under some
      circumstances get the strategy for the wrong superclass of an instance.
      It is very unlikely anyone has ever encountered this in the wild, but it
      is conceivably possible given that a mix of namedtuple and tuple are used
      fairly extensively inside hypothesis which do exhibit this pattern of
      strategy.

0.3.3 - TBD
    * could_have_produced for lists and other collections would not have
      examined the elements and thus when using a union of different types of
      list this could result in Hypothesis getting confused and passing a value
      to the wrong strategy. This could potentially result in exceptions being
      thrown from within simplification.
    * Drop dependency on six for cross-version compatibility. It was easy
      enough to write the shim for the small set of features that we care about
      and this lets us avoid a moderately complex dependency.